--- a/plc4x/throwing-the-towel.adoc
+++ b/plc4x/throwing-the-towel.adoc
@@ -46,10 +46,10 @@ For any part of the project were always multiple people able and willing to take
 However, when Covid hit us, many of the contributors grew more and more dormant.
 Some had to fight to keep the lights on in their own businesses and simply didn't have any more time or energy to spare, others simply changed jobs to positions that no longer required PLC4X.
 Due to budget cuts, I could no longer continue to work on PLC4X as part of my job at codecentric.
-Unfortunately, getting new folks on board during that time was super challenging.
+Getting new folks on board during that time was super challenging during this time.
 
 Right now I would count 4-5 of the core team still actively working on parts of the project.
-However, it seems we have lost everyone else who was working on the base house-keeping of the project.
+However, it seems we have lost everyone else who was working on the house-keeping of the project.
 
 An open source project is more than implementing features.
 Bill Doerrfeld writes in his recently published blog-post (https://thenewstack.io/open-source-is-at-a-crossroads/): "People also don’t often realize that community management for open source projects is a full-time job"
@@ -68,9 +68,9 @@ Some even closed their issues with snarky: "giving up on this lib using lib X no
 
 But still there were enough issues remaining to cause quite a wall of issues forming, one I recently decided to squash, fixing more than half of the open issues within 2-3 weeks.
 
-== Promises
-
 This was all work that I have been continuing to do mostly in my free time.
+
+== Promises
 
 As I mentioned before, I left codecentric in 2020, since I was no longer allowed to work on PLC4X in my work time due to covid-related budget cuts.
 I decided to stick with PLC4X and looked for a position where I could continue to work on it.
@@ -90,14 +90,14 @@ For this, I blame the industry, for which this project was created, that has yet
 
 image::Give-them-nothing-But-take-from-them-everything.jpg[]
 
-Open-Source is a model for collaborating, providing the common grounds for even the greatest competitors can work on something together, that none of them could do alone.
+Open-Source is a model for collaborating, providing the common grounds for even the greatest competitors to work on something together, that none of them could do alone.
 A form of collaboration where the common need outweighs their differences and allows the creation of something that isn't core to either of their businesses.
 
 I tried everything: Offering Consulting, GitHub Sponsors, Crowdfunding.
 
 With GitHub Sponsors, I got in total 150€ in sponsorship from a friend of mine, but that was it.
-The crowdfunding project that I set up with my company didn't even get a single cent of donations.
-My buymeacoffe.com page (https://buymeacoffee.com/christoferu) got exactly one donation from a former colleague of mine from codecentric (thanks for that, by the way ... but admittedly I think I also got myself a beer or two ;-) )
+The crowdfunding project that I set up with my company didn't even get a single cent invested.
+My buymeacoffe.com page (https://buymeacoffee.com/christoferu) got exactly one donation from a former colleague of mine (thanks for that, by the way ... but admittedly I think I also got myself a beer or two ;-) )
 
 == Is it worth it?
 
@@ -105,7 +105,7 @@ I started reflecting on what I managed to achieve so far and if it's worth conti
 
 Even if every POC I did was a huge success, and I was usually able to greatly outperform the industry standard.
 Still only one resulted in a real gig.
-Unfortunately in the automation space, open-source projects can't compete with the marketing and sales departments of the major automation-vendors.
+Unfortunately in the automation space, small companies and open-source projects can't compete with the marketing and sales departments of the major automation-vendors.
 
 The list of the stuff I was able to achieve before joining Timecho was small:
 
@@ -152,7 +152,7 @@ I have come to learn that promises in the OT-world are worth nothing.
 
 Lately, I've simply been completely burning out.
 The huge pile of work, combined with the lack of reward for doing it, was simply too much for me.
-I used to stay up long and even developed a sort of hate towards me bed, although I was too tired to stand.
+I used to stay up long and even developed a sort of hate towards my bed, although I was too tired to stand.
 When I finally lay down I usually woke up 4 hours later, no matter how much I wished and needed to sleep longer.
 In the early morning I then finally give in and get up to start working again – almost thankful for being able to stop trying.
 
@@ -190,7 +190,7 @@ On the flip-side, if this doesn't happen, there also is a chance that quite the 
 When there is nobody around to take care of the annoying house-work, and therefore not being able to concentrate on the fun parts, hat could also drive people away.
 
 In the case that community involvement dries up even more, Apache PLC4X could be heading for the Apache Attic.
-This is the place where all Apache projects go, once the community around an Apache project is no longer able or willing to provide the amount of support that's expected of it.
+This is the place where all Apache projects go, once the community around a project is no longer able or willing to provide the amount of support that's expected of it.
 
 I will continue to invest my free time into open-source.
 However, just in projects that I believe have a sustainable future or just for fun.
@@ -199,20 +199,20 @@ Even if I have completely lost my faith in open-source in the OT-industry, I sti
 
 == Glimpse into the future
 
-There's something big lurking around the corner, that might become an issue soon and which could speed up some things.
+There's something big lurking around the corner, that might become an issue soon and which could speed up things.
 
-Once the CRA and PLD initiatives are becoming binding legal frameworks in Europe and probably also similar initiatives elsewhere will be falling into place, I expect the `house-keeping` in projects such as Apache PLC4X to skyrocket.
+Once the CRA and PLD initiatives are becoming binding legal frameworks in Europe and probably also similar initiatives elsewhere, I expect the `house-keeping` in projects such as Apache PLC4X to skyrocket.
 A very long list of rules will apply to how software is to be created and maintained.
 Also will open-source projects no longer be able to provide the software "as-is", as excluding liability will then not be possible anymore.
 
 If there's nobody willing or able to do that or live with the risks, that's going to create facts a lot quicker than most people expect.
 
 Money would definitely be well invested in supporting open-source projects in general,
-especially those projects that don't have any form of commercial backing are probably most in need of funding.
+especially those projects that don't have any form of commercial backing.
 Otherwise, these will not have the money and power to prepare for coming changes.
-Some rules for projects considered `critical infrastructure` - which I have been told PLC4X and all similar projects from the same thematic area possibly will fall under - will most probably require them to execute external code audits in order to be allowed to release software.
+Some rules for projects considered `critical infrastructure` - which I have been told, PLC4X and similar projects from the same thematic area possibly will fall under - will most probably require them to execute external code audits in order to be allowed to release software.
 
-Which group of private people will be willing to invest the significant amounts of money in order to pay for something, just to enable others to continue taking their stuff for free, while at the same time putting themselves at risk to be liable for any damage caused by using their software?
+Which group of private people will be willing to invest the significant amounts of money in order to pay for something, just to enable others to continue taking their stuff for free?
 
 I see no way around significant investments by entities relying on open-source but also legal bodies such as the European Union, in order to keep the lights on.
 
